[tool.poetry]
name = "ptsooy"
version = "0.1.2"
description = ""
authors = ["Pablo Gómez <pablogomez@pablogomez.com>"]

[tool.poetry.dependencies]
python = "^3.8"
feedparser = "^5.2.1"
opml = "^0.5"
pyyaml = "^5.3.1"
youtube_dl = "^2020.7.28"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
